--- a/app/components/Home.css
+++ b/app/components/Home.css
@@ -1,8 +1,15 @@
 .container {
   position: absolute;
-  top: 30%;
-  left: 10px;
+  top: 5%;
+  left: 2%;
+  height: 75%;
+  width: 84%;
   text-align: center;
+  border-radius: 5%;
+  padding: 3em;
+  background-image: url('../resources/corkboard.jpeg');
+  background-repeat: repeat;
+  background-size: 20% 20%;
 }
 
 .container h2 {
